# Frog-SDK

./: AUTHORS  CONTRIBUTING.md  README.md  frog.code-workspace  package.json
.github/: pull_request_template.md
Frog landing page/: .env  index.html  package-lock.json  script.js  sol-request.js  solana_tracker.py  style.css
Livestream/: livestream.py
docs/: README.md  chains-wallets-plugins.mdx  chains.mdx  examples.mdx  introduction.mdx  mint.json  plugins.mdx  wallets.mdx
python/: README.md  pyproject.toml
python/examples/: README.md
python/examples/langchain/solana/: example.py  pyproject.toml
python/examples/langchain/web3/: example.py  pyproject.toml
python/examples/solana/wallet/: example.py  pyproject.toml
python/scripts/: create_plugin.py
python/src/adapters/langchain/: README.md  pyproject.toml
python/src/adapters/langchain/goat_adapters/: desktop.ini
python/src/adapters/langchain/goat_adapters/langchain/: adapter.py
python/src/frog-sdk/: README.md  pyproject.toml
python/src/frog-sdk/frog/classes/: plugin_base.py  wallet_client_base.py
python/src/frog-sdk/frog/decorators/: tool.py
python/src/plugins/1inch/: README.md  pyproject.toml
python/src/plugins/1inch/frog/inch1/: __init__.py  service.py
python/src/plugins/allora/: pyproject.toml
python/src/plugins/allora/frog_plugins/allora/: __init__.py  service.py
python/src/plugins/coingecko/: README.md  pyproject.toml
python/src/plugins/coingecko/frog_plugins/coingecko/: __init__.py  service.py
python/src/plugins/dexscreener/: README.md  pyproject.toml
python/src/plugins/dexscreener/frog_plugins/dexscreener/: __init__.py  service.py
python/src/plugins/erc20/: README.md  pyproject.toml
python/src/plugins/erc20/frog_plugins/erc20/: __init__.py  service.py
python/src/plugins/farcaster/: README.md  pyproject.toml
python/src/plugins/farcaster/frog_plugins/farcaster/: __init__.py  service.py
python/src/plugins/jsonrpc/: README.md  pyproject.toml
python/src/plugins/jsonrpc/frog_plugins/jsonrpc/: __init__.py  service.py
python/src/plugins/nansen/: README.md  pyproject.toml
python/src/plugins/nansen/frog_plugins/nansen/: __init__.py  service.py
python/src/plugins/opensea/: README.md  pyproject.toml
python/src/plugins/opensea/frog_plugins/opensea/: __init__.py  service.py
python/src/plugins/rugcheck/: README.md  pyproject.toml
python/src/plugins/rugcheck/frog_plugins/rugcheck/: __init__.py  service.py
python/src/plugins/superfluid/: README.md  pyproject.toml
python/src/plugins/superfluid/frog_plugins/superfluid/: __init__.py  service.py
python/src/wallets/evm/: README.md  pyproject.toml
python/src/wallets/evm/frog_wallets/evm/: evm_wallet_client.py  send_eth.py
python/src/wallets/solana/: README.md  pyproject.toml
python/src/wallets/solana/frog_wallets/solana/: wallet.py
python/src/wallets/web3/: README.md  pyproject.toml
python/src/wallets/web3/frog_wallets/web3/: wallet.py
typescript/: README.md  package.json  pnpm-lock.yaml
typescript/.changeset/: config.json
typescript/examples/: README.md
typescript/examples/eleven-labs/conversational-agent/: CHANGELOG.md  README.md  package.json
typescript/examples/eleven-labs/conversational-agent/src/app/: page.tsx
typescript/examples/eleven-labs/conversational-agent/src/app/components/: conversation.tsx
typescript/examples/eleven-labs/conversational-agent/src/app/utils/: index.ts
typescript/examples/eliza/: README.md
typescript/examples/langchain/cosmos/: CHANGELOG.md  index.ts  package.json
typescript/examples/langchain/lit/: CHANGELOG.md  package.json
typescript/examples/langchain/lit/src/: evm.ts  sol.ts
typescript/examples/langchain/viem/: CHANGELOG.md  index.ts  package.json
typescript/examples/model-context-protocol/mode/: CHANGELOG.md  README.md  package.json
typescript/examples/model-context-protocol/mode/src/: index.ts
typescript/examples/vercel-ai/abstract/: CHANGELOG.md  README.md  index.ts  package.json
typescript/examples/vercel-ai/allora/: CHANGELOG.md  index.ts  package.json
typescript/examples/vercel-ai/chromia/: CHANGELOG.md  index.ts  package.json
typescript/examples/vercel-ai/coingecko/: CHANGELOG.md  index.ts  package.json
typescript/examples/vercel-ai/crossmint-smart-wallets/: CHANGELOG.md  index.ts  package.json
typescript/examples/vercel-ai/crossmint-solana-custodial-wallets/: CHANGELOG.md  index.ts  package.json
typescript/examples/vercel-ai/fuel/: CHANGELOG.md  index.ts  package.json
typescript/examples/vercel-ai/headless-checkout/: CHANGELOG.md  index.ts  package.json
typescript/examples/vercel-ai/mode/: CHANGELOG.md  index.ts  package.json
typescript/examples/vercel-ai/modespray/: CHANGELOG.md  index.ts  package.json
typescript/examples/vercel-ai/opensea/: CHANGELOG.md  index.ts  package.json
typescript/examples/vercel-ai/polymarket/: CHANGELOG.md  README.md  create-or-derive-api-key.ts  index.ts  package.json  setup-allowance.ts  test-create-order.ts
typescript/examples/vercel-ai/send-nft-to-twitter/: CHANGELOG.md  index.ts  package.json
typescript/examples/vercel-ai/sns/: CHANGELOG.md  index.ts  package.json
typescript/examples/vercel-ai/solana/: CHANGELOG.md  index.ts  package.json
typescript/examples/vercel-ai/uniswap/: CHANGELOG.md  README.md  index.ts  package.json
typescript/examples/vercel-ai/viem/: CHANGELOG.md  erc721.ts  index.ts  package.json
typescript/examples/virtuals-game/viem/: CHANGELOG.md  index.ts  package.json  toolCalling.ts
typescript/scripts/: createPlugin.ts  package.json
