[tool.poetry]
name = "frog-sdk-example-langchain-solana"
version = "0.1.0"
description = "frog example for Langchain with Solana"
authors = ["Andrea Villa <andreakarimodm@gmail.com>"]
readme = "README.md"
keywords = ["frog", "sdk", "solana", "agents", "ai"]
homepage = "https://ohmyfrog.dev/"
repository = "https://github.com/frog-sdk/frog"
packages = [
    { include = "example.py" },
]

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^0.3.2"
langchain-openai = "^0.2.14"
python-dotenv = "^1.0.1" 
solana = "^0.30.2"
solders = "^0.18.0"
frog-sdk = "^0.1.0"
frog-sdk-wallet-solana = "^0.1.0"
frog-sdk-adapter-langchain = "^0.1.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.4"
pytest-asyncio = "^0.25.0"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/frog-sdk/frog/issues"

[tool.pytest.ini_options]
addopts = [
  "--import-mode=importlib",
]
pythonpath = "src"
asyncio_default_fixture_loop_scope = "function"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.8.6"
frog-sdk = { path = "../../../src/frog-sdk", develop = true }
frog-sdk-wallet-solana = { path = "../../../src/wallets/solana", develop = true }
frog-sdk-adapter-langchain = { path = "../../../src/adapters/langchain", develop = true }

[tool.ruff]
line-length = 120
target-version = "py312"
