[tool.poetry]
name = "frog-sdk-plugin-allora"
version = "0.1.0"
description = "frog plugin for Allora Network price predictions"
authors = ["frog SDK Team"]
readme = "README.md"
keywords = ["frog", "sdk", "web3", "agents", "ai", "allora", "prediction"]
homepage = "https://ohmyfrog.dev/"
repository = "https://github.com/frog-sdk/frog"
packages = [
    { include = "frog_plugins/allora" },
] 

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.8.6"
frog-sdk = "^0.1.1"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.4"
pytest-asyncio = "^0.25.0"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/frog-sdk/frog/issues"

[tool.pytest.ini_options]
addopts = [
  "--import-mode=importlib",
]
pythonpath = "src"
asyncio_default_fixture_loop_scope = "function"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.8.6"
frog-sdk = { path = "../../frog-sdk", develop = true }

[tool.ruff]
line-length = 120
target-version = "py312"
