[tool.poetry]
name = "frog-sdk-wallet-solana"
version = "0.1.0"
description = "frog SDK Solana wallet implementation"
authors = ["Andrea Villa <andreakarimodm@gmail.com>"]
readme = "README.md"
keywords = ["frog", "sdk", "solana", "agents", "ai", "wallet"]
homepage = "https://ohmyfrog.dev/"
repository = "https://github.com/frog-sdk/frog"
packages = [
    { include = "frog_wallets/solana" },
]

[tool.poetry.dependencies]
python = "^3.10"
frog-sdk = "^0.1.0"
solana = "^0.30.2"
solders = "^0.18.0"
PyNaCl = "^1.5.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.4"
pytest-asyncio = "^0.25.0"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/frog-sdk/frog/issues"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
pythonpath = "src"
asyncio_default_fixture_loop_scope = "function"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.8.6"
frog-sdk = { path = "../../frog-sdk", develop = true }

[tool.ruff]
line-length = 120
target-version = "py312"
